# math-problems-generator

./: .env.example  .gitignore  DAILY_CURRICULUM.md  LICENSE  QUICKSTART.md  README.md  demo_daily.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
examples/: generate_pdfs.py
src/math_generator/: __init__.py  aws_lambda.py  daily_cli.py  daily_curriculum.py  main.py  math_agents.py  math_concepts.py  math_crew.py  math_tasks.py  pdf_generator.py
tests/: __init__.py  test_aws_lambda.py  test_math_agents.py  test_math_concepts.py  test_math_crew.py  test_math_tasks.py  test_pdf_generator.py
